--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,74 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>EDLN Caen – Découvre le scoutisme autrement</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+<!DOCTYPE html>
+<html lang="fr">
+  <head>
+    <meta charset="utf-8" />
+    <title>
+      Scouts Caen - Éclaireurs de la Nature | Scoutisme à Caen Normandie
+    </title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- SEO Meta Tags -->
+    <meta
+      name="description"
+      content="Groupe scout EDLN Caen - Éclaireuses et Éclaireurs de la Nature. Scoutisme à Caen en Normandie pour enfants et jeunes de 6 à 20 ans. Activités nature, camps et weekends. Inscription ouverte."
+    />
+    <meta
+      name="keywords"
+      content="scouts caen, scout caen, scoutisme caen, éclaireurs caen, scouts normandie, scoutisme normandie, edln caen, éclaireuses éclaireurs nature, groupe scout caen, scoutisme nature caen"
+    />
+    <meta
+      name="author"
+      content="Éclaireuses et Éclaireurs de la Nature - Groupe de Caen"
+    />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="French" />
+    <meta name="geo.region" content="FR-NOR" />
+    <meta name="geo.placename" content="Caen" />
+    <meta name="geo.position" content="49.1829;0.3707" />
+    <meta name="ICBM" content="49.1829, 0.3707" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://edln-caen.vercel.app/" />
+    <meta
+      property="og:title"
+      content="Scouts Caen - Éclaireurs de la Nature | Scoutisme à Caen Normandie"
+    />
+    <meta
+      property="og:description"
+      content="Groupe scout EDLN Caen - Scoutisme à Caen en Normandie pour enfants et jeunes de 6 à 20 ans. Activités nature, camps et weekends. Inscription ouverte."
+    />
+    <meta
+      property="og:image"
+      content="https://edln-caen.vercel.app/images/Hero-edln.webp"
+    />
+    <meta property="og:locale" content="fr_FR" />
+    <meta property="og:site_name" content="EDLN Caen" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://edln-caen.vercel.app/" />
+    <meta
+      name="twitter:title"
+      content="Scouts Caen - Éclaireurs de la Nature | Scoutisme à Caen Normandie"
+    />
+    <meta
+      name="twitter:description"
+      content="Groupe scout EDLN Caen - Scoutisme à Caen en Normandie pour enfants et jeunes de 6 à 20 ans. Activités nature, camps et weekends."
+    />
+    <meta
+      name="twitter:image"
+      content="https://edln-caen.vercel.app/images/Hero-edln.webp"
+    />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://edln-caen.vercel.app/" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
