Update page title and meta tags to reflect new branding for EDLN Caen

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>
-      Scouts Caen - Éclaireurs de la Nature | Scoutisme à Caen Normandie
+      EDLN Caen - Éclaireurs de la Nature | Scoutisme à Caen Normandie
     </title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -33,7 +33,7 @@
     <meta property="og:url" content="https://edln-caen.vercel.app/" />
     <meta
       property="og:title"
-      content="Scouts Caen - Éclaireurs de la Nature | Scoutisme à Caen Normandie"
+      content="EDLN Caen - Éclaireurs de la Nature | Scoutisme à Caen Normandie"
     />
     <meta
       property="og:description"
@@ -51,7 +51,7 @@
     <meta name="twitter:url" content="https://edln-caen.vercel.app/" />
     <meta
       name="twitter:title"
-      content="Scouts Caen - Éclaireurs de la Nature | Scoutisme à Caen Normandie"
+      content="EDLN Caen - Éclaireurs de la Nature | Scoutisme à Caen Normandie"
     />
     <meta
       name="twitter:description"
