--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
     />
     <meta
       property="og:image"
-      content="https://edln-caen.vercel.app/images/Hero-edln.webp"
+      content="https://edln-caen.vercel.app/images/hero-edln.webp"
     />
     <meta property="og:locale" content="fr_FR" />
     <meta property="og:site_name" content="EDLN Caen" />
@@ -59,7 +59,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://edln-caen.vercel.app/images/Hero-edln.webp"
+      content="https://edln-caen.vercel.app/images/hero-edln.webp"
     />
 
     <!-- Canonical URL -->
